# Kruskals-algorithm

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
src/: main.c  shell.html
